--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpage</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Abstract</title>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
 </head>
 <body>
+    <header class="header">
+        <div class="home-menu">
+            <img src="" alt="" />
+            <h2 class="Abstract" title="Go to qoabstract.com"><a href="/">Abstract</a></h2>
+            <h1 class="help-center" title="home"><a href="/">Help Center</a></h1>
+        </div>
+        <div class="member">
+            <button class="request">Submit a request</button>
+            <button class="sign">Sign in</button>
+        </div>
+        <input type="text" />
+    </header>
     <main>
-        <section class="group1">
-            <h2 class="a11y-hidden">유효성 검사 배너</h2>
-            <ul class="validation-list">
-                <li><a href="/" target="_blank" rel="noreferrer noopener" title="새 창으로 이동">W3C Markup Validation</a></li>
-                <li><a href="/" target="_blank" rel="noreferrer noopener" title="새 창으로 이동">CSS Validation Service</a></li>
-            </ul>
-        </section>
     </main>
 </body>
 </html>
