main완성 footer배치전

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <div class="header-bar">
       <div class="home-menu">
-        <img src="./image/logo.png" alt="" />
-        <h2 class="Abstract" title="Go to qoabstract.com"><a href="/">Abstract</a></h2>
+        <img class="header-logo" src="./image/logo.png" alt="" />
+        <h2 class="abstract" title="Go to qoabstract.com"><a href="/">Abstract</a></h2>
         <h1 class="help-center" title="home"><a href="/">Help Center</a></h1>
       </div>
       <div class="member">
@@ -27,7 +27,7 @@
         <fieldset>
           <legend>search</legend>
           <label for="search" class="a11y-hidden">search</label>
-          <input type="search" id="search" class="form-input" required placeholder="search"/>
+          <input type="search" id="search" class="form-input" required placeholder="Search"/>
         </fieldset>
       </form>
     </div>
@@ -38,7 +38,7 @@
         <dl class="howtouse">
           <dt>Using Abstract</dt>
           <dd><img src="./image/branches.png" alt="" /></dd>
-          <dd>Abstract lets you manage, version, and document your designs in one place.</dd>
+          <dd class="add-explanation">Abstract lets you manage, version, and document your designs in one place.</dd>
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
@@ -46,7 +46,7 @@
         <dl class="manage-account">
           <dt>Manage your account</dt>
           <dd><img src="./image/account.png" alt="" /></dd>
-          <dd>Configure your account settings, such as your email, profile details, and password.</dd>
+          <dd class="add-explanation">Configure your account settings, such as your email, profile details, and password.</dd>
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
@@ -54,7 +54,7 @@
         <dl class="manage-group">
           <dt>Manage organizations, teams, and projects</dt>
           <dd><img src="./image/organization.png" alt="" /></dd>
-          <dd>Use Abstract organizations, teams, and projects to organize your people and your work</dd>
+          <dd class="add-explanation">Use Abstract organizations, teams, and projects to organize your people and your work</dd>
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
@@ -62,7 +62,7 @@
         <dl class="manage-billing">
           <dt>Manage billing</dt>
           <dd><img src="./image/billing.png" alt="" /></dd>
-          <dd>Change subscriptions and payment details.</dd>
+          <dd class="add-explanation">Change subscriptions and payment details.</dd>
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
@@ -70,7 +70,7 @@
         <dl class="auth">
           <dt>Authenticate to Abstract</dt>
           <dd><img src="./image/authenticate.png" alt="" /></dd>
-          <dd>Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+          <dd class="add-explanation">Set up and configure SSO, SCIM, and Just-in-Time provisioning.
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
@@ -78,14 +78,60 @@
         <dl class="support">
           <dt>Abstract support</dt>
           <dd><img src="./image/support.png" alt="" /></dd>
-          <dd>Get in touch with a human.</dd>
+          <dd class="add-explanation">Get in touch with a human.</dd>
           <dd><a href="/">Learn More →</a></dd>
         </dl>
       </section>
     </div>
   </main>
   <footer class="footer">
-    
+    <ul class="footer-menu">
+      <li>
+        <h3 class="footer-title">Abstract</h3>
+        <ul class="footer-list">
+          <li><a href="/">Start Trial</a></li>
+          <li><a href="/">Pricing</a></li>
+          <li><a href="/">Download</a></li>
+        </ul>
+      </li>
+      <li>
+        <h3 class="footer-title">Resources</h3>
+        <ul class="footer-list">
+          <li><a href="/">Blog</a></li>
+          <li><a href="/">Help Center</a></li>
+          <li><a href="/">Release Notes</a></li>
+          <li><a href="/">Status</a></li>
+        </ul>
+      </li>
+      <li>
+        <h3 class="footer-title">Community</h3>
+        <ul class="footer-list">
+          <li><a href="/">Twitter</a></li>
+          <li><a href="/">LinkedIn</a></li>
+          <li><a href="/">Facebook</a></li>
+          <li><a href="/">Dribbble</a></li>
+          <li><a href="/">Podcast</a></li>
+        </ul>
+      </li>
+      <li>
+        <h3 class="footer-title">Company</h3>
+        <ul class="footer-list">
+          <li><a href="/">About Us</a></li>
+          <li><a href="/">Careers</a></li>
+          <li><a href="/">Legal</a></li>
+          <li>
+            <address class="address">
+              <span>Contact Us</span>
+              <span>info@abstract.com</span>
+            </address>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <small>
+      <img src="./image/logo.png" alt="" />
+      Copyright 2022 <br /> Abstract Studio Design, Inc. <br /> All rights reserved
+    </small>
   </footer>
 </body>
 </html>
